--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: Build and Push Versioned Docker Image (Semantic)
 
 on:
   push:
@@ -6,12 +6,20 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+
+    - name: Extract version from Git tag or commit count
+      id: version
+      run: |
+        # Try to get the latest tag, fallback to commit count
+        TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.$(git rev-list --count HEAD)")
+        echo "VERSION=$TAG" >> $GITHUB_ENV
+        echo "Detected version: $TAG"
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -22,10 +30,12 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and push Docker image
+    - name: Build and push Docker image with semantic version
       uses: docker/build-push-action@v5
       with:
         context: .
         file: ./WebApplication1/Dockerfile
         push: true
-        tags: kkausha/webapplication1:latest
+        tags: |
+          kkausha/webapplication1:latest
+          kkausha/webapplication1:${{ env.VERSION }}
