--- a/.github/workflows/ACR.yml
+++ b/.github/workflows/ACR.yml
@@ -2,7 +2,7 @@ name: Build and Push Versioned Docker Image to ACR
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   workflow_dispatch:
     inputs:
       version:
