--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -24,8 +25,10 @@ jobs:
 
     - name: Build the Docker image
       run: |
-        IMAGE_TAG=my-image-name:$(date +%s)
-        docker build . --file Dockerfile --tag $IMAGE_TAG
+        IMAGE_TAG=${{ secrets.DOCKER_USERNAME }}/webapplication1:$(date +%s)
+        docker build WebApplicdocker/WebApplication1 \
+          --file WebApplicdocker/WebApplication1/Dockerfile \
+          --tag $IMAGE_TAG
         echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
     - name: Push image to Docker Hub
