--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,7 @@ jobs:
     - name: Build the Docker image
       run: |
         IMAGE_TAG=${{ secrets.DOCKER_USERNAME }}/webapplication1:$(date +%s)
-        docker build WebApplicdocker/WebApplication1 \
-          --file WebApplicdocker/WebApplication1/Dockerfile \
-          --tag $IMAGE_TAG
+        docker build WebApplication1 --file WebApplication1/Dockerfile --tag $IMAGE_TAG
         echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
     - name: Push image to Docker Hub
